improve css and images

--- a/contact.html
+++ b/contact.html
@@ -19,13 +19,13 @@ keywords: "contact famille animaux Savoie, conseils bien-être animal, amoureux 
         "@type": "ListItem",
         "position": 1,
         "name": "Accueil",
-        "item": "https://peakcl.github.io/Les9poilus"
+        "item": "https://La Communauté des 9 Poilus.github.io/Les9poilus"
       },
       {
         "@type": "ListItem",
         "position": 2,
         "name": "Contact",
-        "item": "https://peakcl.github.io/Les9poilus/contact"
+        "item": "https://La Communauté des 9 Poilus.github.io/Les9poilus/contact"
       }
     ]
   }
