--- a/nos-anges.html
+++ b/nos-anges.html
@@ -19,13 +19,13 @@ keywords: "mémoire animaux disparus, hommage chien chat décédé, souvenir ani
         "@type": "ListItem",
         "position": 1,
         "name": "Accueil",
-        "item": "https://peakcl.github.io/Les9poilus"
+        "item": "https://La Communauté des 9 Poilus.github.io/Les9poilus"
       },
       {
         "@type": "ListItem",
         "position": 2,
         "name": "Nos Anges Gardiens",
-        "item": "https://peakcl.github.io/Les9poilus/nos-anges"
+        "item": "https://La Communauté des 9 Poilus.github.io/Les9poilus/nos-anges"
       }
     ]
   }
@@ -67,7 +67,7 @@ keywords: "mémoire animaux disparus, hommage chien chat décédé, souvenir ani
                 <div class="animal-card bg-white/80 backdrop-blur-sm rounded-3xl shadow-xl overflow-hidden border border-purple-200/50 hover:shadow-2xl transition-all duration-500">
                     <div class="animal-photo">
                         <!-- Zone photo pour Praline -->
-                        <img src="/assets/images/animaux/praline.JPG" 
+                        <img src="/assets/images/animaux/praline.webp" 
                              alt="Praline - Notre chienne bien-aimée" 
                              loading="lazy"
                              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -105,7 +105,7 @@ keywords: "mémoire animaux disparus, hommage chien chat décédé, souvenir ani
                 <div class="animal-card bg-white/80 backdrop-blur-sm rounded-3xl shadow-xl overflow-hidden border border-purple-200/50 hover:shadow-2xl transition-all duration-500">
                     <div class="animal-photo">
                         <!-- Zone photo pour Kima -->
-                        <img src="/assets/images/animaux/Kima.jpg" 
+                        <img src="/assets/images/animaux/Kima.webp" 
                              alt="Kima - Notre chienne courageuse" 
                              loading="lazy"
                              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -160,7 +160,7 @@ keywords: "mémoire animaux disparus, hommage chien chat décédé, souvenir ani
                 <div class="animal-card bg-white/80 backdrop-blur-sm rounded-3xl shadow-xl overflow-hidden border border-purple-200/50 hover:shadow-2xl transition-all duration-500">
                     <div class="animal-photo">
                         <!-- Zone photo pour Kiwi -->
-                        <img src="/assets/images/animaux/kiwi.jpg" 
+                        <img src="/assets/images/animaux/kiwi.webp" 
                              alt="Kiwi - Notre chat espiègle" 
                              loading="lazy"
                              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -198,7 +198,7 @@ keywords: "mémoire animaux disparus, hommage chien chat décédé, souvenir ani
                 <div class="animal-card bg-white/80 backdrop-blur-sm rounded-3xl shadow-xl overflow-hidden border border-purple-200/50 hover:shadow-2xl transition-all duration-500">
                     <div class="animal-photo">
                         <!-- Zone photo pour Litchi -->
-                        <img src="/assets/images/animaux/Litchi.JPG" 
+                        <img src="/assets/images/animaux/Litchi.webp" 
                              alt="Litchi - Notre chat câlin" 
                              loading="lazy"
                              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
