--- a/nos-animaux.html
+++ b/nos-animaux.html
@@ -19,13 +19,13 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
         "@type": "ListItem",
         "position": 1,
         "name": "Accueil",
-        "item": "https://peakcl.github.io/Les9poilus"
+        "item": "https://La Communauté des 9 Poilus.github.io/Les9poilus"
       },
       {
         "@type": "ListItem",
         "position": 2,
         "name": "Nos Animaux",
-        "item": "https://peakcl.github.io/Les9poilus/nos-animaux"
+        "item": "https://La Communauté des 9 Poilus.github.io/Les9poilus/nos-animaux"
       }
     ]
   }
@@ -90,7 +90,7 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
             <div class="animal-card bg-gradient-to-br from-poilu-roy/20 to-cyan-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden border-2 border-poilu-roy/50">
                 <div class="animal-photo">
                     <!-- Zone photo pour Mako -->
-                    <img src="/assets/images/animaux/mako.JPG" 
+                    <img src="/assets/images/animaux/mako.webp" 
                          alt="Mako - Le patron de la famille" 
                          loading="lazy"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -142,7 +142,7 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
             <div class="animal-card bg-gradient-to-br from-pink-200/50 to-rose-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden">
                 <div class="animal-photo">
                     <!-- Zone photo pour Hawaï -->
-                    <img src="/assets/images/animaux/hawai.JPG" 
+                    <img src="/assets/images/animaux/hawai.webp" 
                          alt="Hawaï - Chat mâle zen et affectueux" 
                          loading="lazy"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -174,7 +174,7 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
             <div class="animal-card bg-gradient-to-br from-poilu-soleil/25 to-amber-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden">
                 <div class="animal-photo">
                     <!-- Zone photo pour Mowgli -->
-                    <img src="/assets/images/animaux/mowgli.jpg" 
+                    <img src="/assets/images/animaux/mowgli.webp" 
                          alt="Mowgli - Chat mâle aventurier et curieux" 
                          loading="lazy"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -206,7 +206,7 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
             <div class="animal-card bg-gradient-to-br from-poilu-turquoise/20 to-cyan-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden">
                 <div class="animal-photo">
                     <!-- Zone photo pour Phuket -->
-                    <img src="/assets/images/animaux/phuket.jpg" 
+                    <img src="/assets/images/animaux/phuket.webp" 
                          alt="Phuket - Chat femelle libre et indépendante" 
                          loading="lazy"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -238,7 +238,7 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
             <div class="animal-card bg-gradient-to-br from-poilu-roy/25 to-indigo-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden">
                 <div class="animal-photo">
                     <!-- Zone photo pour Nyx -->
-                    <img src="/assets/images/animaux/nyx.png" 
+                    <img src="/assets/images/animaux/nyx.webp" 
                          alt="Nyx - Chat femelle élégante et protectrice" 
                          loading="lazy"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -270,7 +270,7 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
             <div class="animal-card bg-gradient-to-br from-poilu-turquoise/25 to-blue-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden">
                 <div class="animal-photo">
                     <!-- Zone photo pour Téthys -->
-                    <img src="/assets/images/animaux/tethys.png" 
+                    <img src="/assets/images/animaux/tethys.webp" 
                          alt="Téthys - Chat femelle gracieuse et mystérieuse" 
                          loading="lazy"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -302,7 +302,7 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
             <div class="animal-card bg-gradient-to-br from-poilu-soleil/30 to-yellow-100/40 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden">
                 <div class="animal-photo">
                     <!-- Zone photo pour Yellow -->
-                    <img src="/assets/images/animaux/yellow.jpg" 
+                    <img src="/assets/images/animaux/yellow.webp" 
                          alt="Yellow - Chat femelle joyeuse et lumineuse" 
                          loading="lazy"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -351,7 +351,7 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
             <div class="animal-card bg-gradient-to-br from-poilu-soleil/20 to-amber-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden">
                 <div class="animal-photo">
                     <!-- Zone photo pour GoodVisor du Gelon -->
-                    <img src="/assets/images/animaux/good.jpg" 
+                    <img src="/assets/images/animaux/good.webp" 
                          alt="GoodVisor du Gelon dit Good - Cheval noble et protecteur" 
                          loading="lazy"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -385,7 +385,7 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
             <div class="animal-card bg-gradient-to-br from-poilu-turquoise/20 to-emerald-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden">
                 <div class="animal-photo">
                     <!-- Zone photo pour Comme d'habitude -->
-                    <img src="/assets/images/animaux/commed'hab.jpg" 
+                    <img src="/assets/images/animaux/commedhab.webp" 
                          alt="Comme d'habitude - Jument régulière et paisible" 
                          loading="lazy"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
