--- a/notre-histoire.html
+++ b/notre-histoire.html
@@ -23,7 +23,7 @@ permalink: /notre-histoire/
     "latitude": "45.6772",
     "longitude": "6.3622"
   },
-  "url": "https://peakcl.github.io/Les9poilus/notre-histoire",
+  "url": "https://La Communauté des 9 Poilus.github.io/Les9poilus/notre-histoire",
   "about": "Histoire d'une famille passionnée vivant avec 9 compagnons animaux",
   "mainEntity": {
     "@type": "Family",
