--- a/nos-animaux.html
+++ b/nos-animaux.html
@@ -111,12 +111,12 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Mako</h3>
                     <p class="text-gray-700 mb-4 leading-relaxed">
-                        Le vrai chef de la famille ! Rapide comme l'éclair, toujours prêt pour l'aventure et qui fait régner l'ordre dans la troupe.
+                        Né en 2011, **Mako est le pilier de notre cœur familial**. Avec sa sagesse tranquille et son regard bienveillant, ce gentil géant veille sur tous ceux qu'il aime. Malgré ses années qui s'accumulent avec grâce, **son âme d'aventurier** reste intacte - ses yeux pétillent encore d'excitation à l'idée d'une balade, nous rappelant chaque jour que l'âge n'est qu'un chiffre quand on a l'amour pour moteur.
                     </p>
                     <div class="flex flex-wrap gap-2">
-                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Chef</span>
-                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Énergique</span>
-                        <span class="bg-poilu-roy/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Protecteur</span>
+                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Gardien</span>
+                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Sage</span>
+                        <span class="bg-poilu-roy/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Éternel</span>
                     </div>
                 </div>
             </div>
@@ -161,11 +161,11 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Hawaï</h3>
                     <p class="text-gray-700 mb-4 leading-relaxed">
-                        Doux comme une brise tropicale, il apporte sérénité et tendresse à toute la famille.
+                        Arrivé de la SPA en 2012, **Hawaï a transformé notre maison en paradis**. Ce petit ange roux est littéralement **un rayon de soleil incarné** - impossible de résister à sa tendresse infinie ! Véritable "pot de colle" au grand cœur, il possède ce don magique d'apaiser les âmes troublées d'un simple ronron. **Avec Hawaï, chaque jour devient plus doux**, chaque instant plus précieux.
                     </p>
                     <div class="flex flex-wrap gap-2">
-                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Zen</span>
-                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Affectueux</span>
+                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Solaire</span>
+                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Thérapeutique</span>
                     </div>
                 </div>
             </div>
@@ -193,11 +193,11 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Mowgli</h3>
                     <p class="text-gray-700 mb-4 leading-relaxed">
-                        L'aventurier né, curieux de tout et explorateur dans l'âme.
+                        L'histoire de **Mowgli nous brise et nous répare le cœur à la fois**. Arrivé en 2019, ce petit sauvage n'avait jamais connu la douceur humaine. Des mois de patience, de murmures tendres et de gestes délicats ont été nécessaires pour **briser les murs de sa méfiance**. Aujourd'hui, ce miracle à quatre pattes nous suit partout - même dans nos balades de 3-4 km aux côtés de Mako ! **Chaque câlin qu'il nous offre semble porter en lui toute sa reconnaissance** pour cette seconde chance que la vie lui a donnée. Un esprit libre qui a choisi de nous faire confiance... **quelle leçon d'amour** !
                     </p>
                     <div class="flex flex-wrap gap-2">
-                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Aventurier</span>
-                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Curieux</span>
+                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Miraculé</span>
+                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Reconnaissant</span>
                     </div>
                 </div>
             </div>
@@ -225,11 +225,11 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Phuket</h3>
                     <p class="text-gray-700 mb-4 leading-relaxed">
-                        Esprit libre et indépendant, elle nous rappelle l'importance de la liberté.
+                        **L'histoire d'amour la plus touchante** : un jour de 2019, Hawaï est rentré avec cette petite âme en détresse... et elle n'est plus jamais repartie. Phuket est **une princesse au cœur farouche**, gardienne de son intimité comme un trésor. Mais oh ! **quel privilège immense quand elle daigne nous accorder sa confiance** ! Ses câlins sont rares, précieux comme des diamants - **chaque moment de tendresse qu'elle nous offre vaut tous les trésors du monde**. Une leçon de patience et d'amour authentique.
                     </p>
                     <div class="flex flex-wrap gap-2">
-                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Libre</span>
-                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Indépendante</span>
+                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Précieuse</span>
+                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Mystérieuse</span>
                     </div>
                 </div>
             </div>
@@ -257,11 +257,11 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Nyx</h3>
                     <p class="text-gray-700 mb-4 leading-relaxed">
-                        Élégante déesse de la nuit, elle veille sur notre sommeil paisible.
+                        **Septembre 2024, un miracle en double** : nous découvrons Nyx et sa sœur Téthys, deux petites âmes fragiles de quelques semaines. Nyx s'est rapidement révélée être **notre petite gardienne**, une élégante sentinelle au caractère bien trempé ! **Avec sa grâce naturelle et sa détermination sans faille**, elle veille sur chaque membre de notre famille comme une vraie maman-chat. Son regard perçant semble dire : "**Personne ne touchera à ma famille !**" Une force de la nature dans un corps de velours.
                     </p>
                     <div class="flex flex-wrap gap-2">
-                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Élégante</span>
-                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Protectrice</span>
+                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Gardienne</span>
+                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Déterminée</span>
                     </div>
                 </div>
             </div>
@@ -289,11 +289,11 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Téthys</h3>
                     <p class="text-gray-700 mb-4 leading-relaxed">
-                        Mystérieuse comme l'océan, elle nous fascine par sa grâce naturelle.
+                        **La sœur tendre de notre petit duo miraculé** ! Téthys incarne **la douceur à l'état pur** - une petite âme délicate qui nous a choisis dès ses premiers jours. Contrairement à sa sœur au tempérament de feu, elle préfère **les murmures aux cris, les caresses aux conquêtes**. Ses siestes au soleil ressemblent à de petits tableaux de bonheur, et quand elle vient se blottir contre nous... **le monde entier semble suspendre son souffle**. Un petit ange qui nous rappelle que la tendresse est un superpouvoir.
                     </p>
                     <div class="flex flex-wrap gap-2">
-                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Gracieuse</span>
-                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Mystérieuse</span>
+                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Angélique</span>
+                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Apaisante</span>
                     </div>
                 </div>
             </div>
@@ -321,11 +321,11 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Yellow</h3>
                     <p class="text-gray-700 mb-4 leading-relaxed">
-                        Rayonnante de joie, elle illumine chaque journée de sa bonne humeur.
+                        **L'histoire qui nous fait pleurer de joie à chaque fois** ! En 2024, la SPA nous a présenté cette petite guerrière de 3 semaines, **la patte arrière déchiquetée, le pronostic vital incertain**... Les vétérinaires ne savaient pas si elle allait s'en sortir. Nous l'avons accueillie à 2 mois et demi, **le cœur serré mais l'espoir intact**. Aujourd'hui, regardez-la ! **Cette petite boule de soleil défie la gravité et nos larmes de joie !** Malgré son handicap, elle rayonne d'un bonheur si pur, si contagieux... **Yellow nous enseigne chaque jour que la joie de vivre ne dépend pas de nos circonstances, mais de notre cœur**. Une leçon de vie qui nous bouleverse quotidiennement. 💛
                     </p>
                     <div class="flex flex-wrap gap-2">
-                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Joyeuse</span>
-                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Lumineuse</span>
+                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Inspirante</span>
+                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Miraculeuse</span>
                     </div>
                 </div>
             </div>
@@ -369,14 +369,14 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
                 </div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">GoodVisor du Gelon</h3>
-                    <p class="text-sm text-poilu-turquoise font-semibold mb-2">Dit "Good"</p>
+                    <p class="text-sm text-poilu-turquoise font-semibold mb-2">Dit "Good" - Notre clown géant !</p>
                     <p class="text-gray-700 mb-4 leading-relaxed">
-                        Le sage de la troupe, toujours présent pour veiller sur ses compagnons avec noblesse et dignité.
+                        Né en 2016, **Good est notre comédien à quatre sabots** ! Ce trotteur réformé des courses a trouvé chez nous sa vraie vocation : **faire sourire et donner le meilleur de lui-même**. Avec son cœur d'or et sa générosité sans limite, il transforme chaque séance de dressage en moment magique, **s'appliquant avec tant de sérieux qu'on en a les larmes aux yeux**. Sa découverte récente du cross ? **Un moment de pure euphorie équine !** Certes, il a parfois des petites frayeurs en balade, mais **son courage et sa fidélité font de lui un compagnon exceptionnel**. Un géant doux qui nous prouve chaque jour que la seconde chance peut être la plus belle. 
                     </p>
                     <div class="flex flex-wrap gap-2">
-                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Noble</span>
-                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Protecteur</span>
-                        <span class="bg-poilu-roy/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Sage</span>
+                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Généreux</span>
+                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Comédien</span>
+                        <span class="bg-poilu-roy/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Appliqué</span>
                     </div>
                 </div>
             </div>
@@ -404,12 +404,12 @@ keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien ani
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Comme d'habitude</h3>
                     <p class="text-gray-700 mb-4 leading-relaxed">
-                        Prévisible et rassurante, elle apporte la stabilité dans notre quotidien avec sa douceur féminine.
+                        **L'histoire d'amour la plus profonde et complexe** ! Cette jument de 2012 possède **une âme d'artiste incomprise** - trop sensible, trop authentique pour l'impitoyable machine des courses. Son "gros caractère" ? **En réalité, c'est une âme pure qui refuse les compromis** ! Il nous a fallu des mois de patience, de larmes parfois, de remises en question profondes... **Mais quel trésor nous avons découvert !** Quand Comme d'hab vous accorde sa confiance, c'est comme recevoir les clés de son royaume secret. **Cette jument exceptionnelle nous a appris qu'aimer, c'est parfois réapprendre à communiquer entièrement**. Une leçon d'humilité et de persévérance qui nous transforme à jamais.
                     </p>
                     <div class="flex flex-wrap gap-2">
-                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Régulière</span>
-                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Paisible</span>
-                        <span class="bg-poilu-roy/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Douce</span>
+                        <span class="bg-poilu-soleil/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Authentique</span>
+                        <span class="bg-poilu-turquoise/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Complexe</span>
+                        <span class="bg-poilu-roy/20 text-poilu-roy px-3 py-1 rounded-full text-sm">Précieuse</span>
                     </div>
                 </div>
             </div>
