--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ keywords: "famille avec animaux Savoie, vie avec chiens chats chevaux, quotidien
             </div>
             <h1 class="text-4xl md:text-6xl font-heading font-bold mb-6">
                 <span class="font-script text-poilu-soleil drop-shadow-lg">Famille Passionnée d'Animaux</span><br>
-                <span class="text-3xl md:text-4xl">La Communauté des 9 Poilus</span>
+                <span class="text-3xl md:text-4xl font-cinzel-bold">La Communauté des 9 Poilus</span>
             </h1>
             <p class="text-xl md:text-2xl mb-8 text-blue-100 font-body">
                 Le <strong>quotidien authentique d'une famille</strong> vivant avec ses animaux en Savoie<br>
