--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ keywords: "famille avec animaux Savoie, vie avec chiens chats chevaux, quotidien
             <!-- Sous-titre SEO -->
             <div class="bg-white/10 backdrop-blur-sm rounded-2xl p-6 mb-12 max-w-4xl mx-auto">
                 <h2 class="text-lg md:text-xl text-blue-100 mb-4">
-                    🏠 <strong>Vie de famille</strong> • 🐕 <strong>1 Chien fidèle</strong> • 🐱 <strong>6 Chats complices</strong> • 🐎 <strong>2 Chevaux en liberté</strong> • 
+                    🏠 <strong>Vie de famille</strong> • 🐕 <strong>1 Chien fidèle</strong> • 🐱 <strong>6 Chats complices</strong> • 🐎 <strong>2 Chevaux</strong> 
                 </h2>
                 <p class="text-blue-200">
                     Pour tous les <strong>amoureux des animaux</strong> qui aiment découvrir le quotidien authentique d'une famille passionnée vivant avec ses compagnons à quatre pattes.
@@ -205,7 +205,7 @@ keywords: "famille avec animaux Savoie, vie avec chiens chats chevaux, quotidien
                 </div>
                 
                 <div class="text-center">
-                    <p class="text-amber-700 font-script text-lg">
+                    <p class="text-amber-700 font-script text-2xl">
                         "Car dans l'amitié véritable, même les plus petites créatures peuvent accomplir de grandes choses."
                     </p>
                     <div class="mt-4 flex justify-center items-center space-x-2 text-amber-600">
@@ -223,7 +223,7 @@ keywords: "famille avec animaux Savoie, vie avec chiens chats chevaux, quotidien
 <section class="py-16 bg-gradient-to-br from-purple-800 to-indigo-900 text-white">
     <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-12">
-            <h2 class="text-3xl md:text-4xl font-heading font-bold text-white mb-4">
+            <h2 class="text-3xl md:text-4xl font-cinzel font-bold text-white mb-4">
                 Ouverts aux <span class="font-script text-poilu-soleil">Collaborations</span> !
             </h2>
             <p class="text-lg text-purple-100 font-body max-w-3xl mx-auto">
@@ -351,7 +351,7 @@ keywords: "famille avec animaux Savoie, vie avec chiens chats chevaux, quotidien
 <section class="py-20 bg-gradient-to-br from-indigo-800 to-purple-800 text-white">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-16">
-            <h2 class="text-4xl font-heading font-bold text-white mb-4">
+            <h2 class="text-4xl font-cinzel font-bold text-white mb-4">
                 Nos <span class="font-script text-poilu-soleil drop-shadow-sm">9 Poilus</span>
             </h2>
             <p class="text-lg text-indigo-100 font-body max-w-2xl mx-auto">
@@ -431,7 +431,7 @@ keywords: "famille avec animaux Savoie, vie avec chiens chats chevaux, quotidien
         <!-- Lien vers nos anges gardiens -->
         <div class="text-center mt-16">
             <div class="max-w-2xl mx-auto">
-                <p class="text-gray-600 mb-6 leading-relaxed">
+                <p class="text-white mb-6 leading-relaxed">
                     Notre famille compte aussi <strong>4 anges gardiens</strong> qui veillent sur nous depuis les étoiles...
                 </p>
                 <a href="{{ '/nos-anges/' | relative_url }}" 
@@ -452,7 +452,7 @@ keywords: "famille avec animaux Savoie, vie avec chiens chats chevaux, quotidien
 <section class="py-20 bg-gradient-to-br from-purple-900 to-slate-900 text-white">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-16">
-            <h2 class="text-4xl font-heading font-bold text-white mb-4">
+            <h2 class="text-4xl font-cinzel font-bold text-white mb-4">
                 Nos dernières <span class="font-script text-poilu-soleil drop-shadow-sm">aventures</span>
             </h2>
             <p class="text-lg text-purple-200 font-body max-w-2xl mx-auto">
@@ -498,7 +498,7 @@ keywords: "famille avec animaux Savoie, vie avec chiens chats chevaux, quotidien
 <section class="py-20 bg-gradient-to-r from-poilu-turquoise via-poilu-roy to-poilu-soleil">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
         <div class="text-white mb-12">
-            <h2 class="text-4xl font-heading font-bold mb-4">
+            <h2 class="text-4xl font-cinzel font-bold mb-4">
                 Suivez nos <span class="font-script">aventures quotidiennes</span> ! 
             </h2>
             <p class="text-xl opacity-90 max-w-3xl mx-auto">
