--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ keywords: "famille avec animaux Savoie, vie avec chiens chats chevaux, quotidien
 </section>
 
 <!-- Section Tolkien - Référence à la Communauté de l'Anneau -->
-<section class="py-16 bg-gradient-to-r from-blue-50 via-indigo-50 to-purple-50 relative overflow-hidden">
+<section class="py-16 bg-gradient-to-br from-amber-100 via-yellow-50 to-orange-100 relative overflow-hidden">
     <!-- Parchemin décoratif en arrière-plan -->
     <div class="absolute inset-0 opacity-30">
         <div class="absolute top-10 left-10 text-6xl transform rotate-12 hover:rotate-0 hover:scale-125 transition-all duration-500 cursor-pointer drop-shadow-lg animate-pulse">🧙‍♂️</div>
